# EasyGNC

./: README.md  main.py  project-scaffold.md  pyproject.toml
control/: behavior.py  consensus.py  leader_follower.py
drone/: drone.py  sensors.py
fusion/: ekf.py  owa.py  random_weighting.py
simulation/: hallway.py
simulation/weather/: standard_atmosphere.csv
swarm/: runner.py  swarm.py
tests/: test_control.py  test_drone.py  test_fusion.py  test_hallway.py  test_sensors.py  test_swarm.py
visualization/: animator.py  metrics.py
