[project]
name = "easygnc"
version = "0.1.0"
description = "5-drone swarm simulator for comparing GNC fusion and control methods"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.scripts]
easygnc = "main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
